--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@
     font-weight: bold;
 }
 
-.post-container #obj p{
+.post-container #obj span{
     color: #999;
     font-size: 18px;
     margin-top: -12px;
@@ -37,7 +37,7 @@
     text-align: left;
 }
 
-.post-container #obj p a{
+.post-container #obj span a{
     color: #fff;
     font-size: 14px;
     background-color: #278ddc;
@@ -48,7 +48,7 @@
     border-radius: 5px;
 }
 
-.post-container #obj p a:hover{
+.post-container #obj span a:hover{
     background-color: #fff;
     color: #278ddc;
     text-decoration: underline;
